--- a/attorneys.html
+++ b/attorneys.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sterling & Sterling Law - Our Attorneys</title>
+    <title>Sterling & Sterling Law - Our Esteemed (and Quirky) Attorneys</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -27,51 +27,51 @@
 
     <main>
         <section class="content-section">
-            <h1>Our Esteemed Attorneys</h1>
-            <p>Our team of experienced legal professionals is dedicated to providing comprehensive and effective legal representation. Learn more about their backgrounds, expertise, and commitment to justice.</p>
+            <h1>Our Esteemed (and Occasionally Eccentric) Attorneys</h1>
+            <p>Our team of highly specialized legal professionals is dedicated to navigating the most baffling and amusing legal quandaries. Learn more about their unique backgrounds, peculiar expertise, and unwavering commitment to trivial justice.</p>
 
             <div class="attorney-grid">
                 <div class="attorney-card">
                     <img src="https://via.placeholder.com/150" alt="Attorney John Sterling">
                     <h3>John Sterling</h3>
-                    <p class="title">Founding Partner</p>
-                    <p class="specialization">Personal Injury, Corporate Law</p>
-                    <p>John Sterling is a seasoned litigator with over 20 years of experience. He is renowned for his tenacious advocacy and successful track record in complex personal injury and corporate litigation cases.</p>
-                    <a href="#">View Profile</a>
+                    <p class="title">Founding Partner & Chief Merriment Officer</p>
+                    <p class="specialization">**Personal Splashing Injury, Inanimate Object Litigation**</p>
+                    <p>John Sterling is a seasoned litigator with over 20 years of experience battling rogue waves and negotiating peace treaties with sentient toasters. He is renowned for his tenacious advocacy in cases involving unwarranted dampness and domestic appliance rebellions.</p>
+                    <a href="#">View Profile (Contains Bad Puns)</a>
                 </div>
 
                 <div class="attorney-card">
                     <img src="https://via.placeholder.com/150" alt="Attorney Sarah Sterling">
                     <h3>Sarah Sterling</h3>
-                    <p class="title">Managing Partner</p>
-                    <p class="specialization">Family Law, Estate Planning</p>
-                    <p>Sarah Sterling brings a compassionate yet strategic approach to family law and estate planning. She is dedicated to guiding clients through challenging personal legal matters with empathy and expertise.</p>
-                    <a href="#">View Profile</a>
+                    <p class="title">Managing Partner & Confectionery Advocate</p>
+                    <p class="specialization">**Melted Confectionery Law, Emotional Distress (Dessert-Related)**</p>
+                    <p>Sarah Sterling brings a compassionate yet strategic approach to the delicate art of dessert defense. She is dedicated to guiding clients through the profound trauma of melted treats and ensuring chocolate bar integrity, one case at a time.</p>
+                    <a href="#">View Profile (Sweet Victory Guaranteed)</a>
                 </div>
 
                 <div class="attorney-card">
                     <img src="https://via.placeholder.com/150" alt="Attorney Michael Davis">
                     <h3>Michael Davis</h3>
-                    <p class="title">Senior Associate</p>
-                    <p class="specialization">Real Estate Law, Business Litigation</p>
-                    <p>Michael Davis specializes in real estate transactions and business litigation. His keen analytical skills and attention to detail ensure favorable outcomes for his clients in diverse commercial disputes.</p>
-                    <a href="#">View Profile</a>
+                    <p class="title">Senior Associate & Absentee Wrangler</p>
+                    <p class="specialization">**Absentee Classmate Litigation, Pool Lane Infractions**</p>
+                    <p>Michael Davis specializes in the complex nuances of non-attendance and aquatic territorial disputes. His keen analytical skills are perfectly suited to tracking down phantom classmates and redressing grievances against diagonal swimmers.</p>
+                    <a href="#">View Profile (He'll Find Them)</a>
                 </div>
 
                 <div class="attorney-card">
                     <img src="https://via.placeholder.com/150" alt="Attorney Emily Chen">
                     <h3>Emily Chen</h3>
-                    <p class="title">Associate Attorney</p>
-                    <p class="specialization">Intellectual Property, Contract Law</p>
-                    <p>Emily Chen focuses on intellectual property and contract law, helping businesses protect their innovations and navigate complex agreements. She is passionate about staying at the forefront of legal developments.</p>
-                    <a href="#">View Profile</a>
+                    <p class="title">Associate Attorney & Master of Quirks</p>
+                    <p class="specialization">**Sun Lounger Squatting, Goggle Theft Prevention**</p>
+                    <p>Emily Chen focuses on the critical areas of outdoor furniture jurisprudence and securing personal aquatic gear. She is passionate about ensuring justice for all victims of towel-based territorial claims and the mysterious disappearance of swim accessories.</p>
+                    <a href="#">View Profile (Will Secure Your Spot)</a>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Sterling & Sterling Law. All rights reserved.</p>
+        <p>© 2025 Sterling & Sterling Law. All rights reserved.</p>
         <div class="social-links">
             <a href="#">Facebook</a>
             <a href="#">LinkedIn</a>
