--- a/request.html
+++ b/request.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sterling & Sterling Law - Request a Consultation</title>
+    <title>Sterling & Sterling Law - Request a Humorous Consultation</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -27,9 +27,9 @@
 
     <main>
         <section class="content-section">
-            <h1>Request a Legal Consultation</h1>
-            <p>Please fill out the form below to request a consultation with one of our attorneys. We will review your submission and get back to you within 1-2 business days to schedule an appointment.</p>
-            <p class="important-note"><strong>Please Note:</strong> This form is for requesting an initial consultation. We do not collect payment information here. Any fees or payment arrangements will be discussed and processed through secure, separate channels after your initial consultation.</p>
+            <h1>Request a Humorous Legal Consultation</h1>
+            <p>Please fill out the form below to request a consultation with one of our uniquely qualified attorneys. We will review your submission and get back to you within 1-2 business days to discuss your profoundly important (and possibly absurd) legal matter.</p>
+            <p class="important-note"><strong>Please Note:</strong> This form is for requesting an initial, often laughter-filled, consultation. We do not collect payment information here. Any fees or payment arrangements (e.g., in advanced sarcasm or rare artisanal cheeses) will be discussed and processed through secure, separate channels after your initial consultation.</p>
 
             <form class="consultation-form" action="#" method="POST">
                 <div class="form-group">
@@ -49,35 +49,37 @@
                     <select id="preferred-contact" name="preferred_contact">
                         <option value="email">Email</option>
                         <option value="phone">Phone</option>
+                        <option value="telepathic">Telepathic (Experimental)</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="case-type">Type of Legal Matter:</label>
+                    <label for="case-type">Type of Humorous Legal Matter:</label>
                     <select id="case-type" name="case_type" required>
                         <option value="">Please Select</option>
-                        <option value="personal-injury">Personal Injury</option>
-                        <option value="family-law">Family Law</option>
-                        <option value="corporate-law">Corporate Law</option>
-                        <option value="real-estate">Real Estate Law</option>
-                        <option value="estate-planning">Estate Planning</option>
-                        <option value="other">Other</option>
+                        <option value="personal-splashing-injury">Personal Splashing Injury</option>
+                        <option value="melted-confectionery-law">Melted Confectionery Law</option>
+                        <option value="absentee-classmate-litigation">Absentee Classmate Litigation</option>
+                        <option value="inanimate-object-disputes">Inanimate Object Disputes (e.g., Rogue Toasters)</option>
+                        <option value="pool-lane-hogging">Pool Lane Hogging Infraction</option>
+                        <option value="sun-lounger-squatting">Sun Lounger Squatting</option>
+                        <option value="other-absurdity">Other Grand Absurdity</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="brief-description">Brief Description of Your Legal Issue:</label>
+                    <label for="brief-description">Brief (but dramatically detailed) Description of Your Legal Issue:</label>
                     <textarea id="brief-description" name="brief_description" rows="8" required></textarea>
                 </div>
                 <div class="form-group">
                     <input type="checkbox" id="terms-agree" name="terms_agree" required>
-                    <label for="terms-agree">I understand that submitting this form does not create an attorney-client relationship.</label>
+                    <label for="terms-agree">I understand that submitting this form does not create an attorney-client relationship, nor does it guarantee we won't judge your choice of swim cap.</label>
                 </div>
-                <button type="submit" class="button">Submit Request</button>
+                <button type="submit" class="button">Submit Hilarious Request</button>
             </form>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Sterling & Sterling Law. All rights reserved.</p>
+        <p>© 2025 Sterling & Sterling Law. All rights reserved.</p>
         <div class="social-links">
             <a href="#">Facebook</a>
             <a href="#">LinkedIn</a>
